--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -311,7 +311,9 @@ jobs:
           export DEBIAN_FRONTEND=noninteractive
           apt-get update
           apt-get install -y --no-install-recommends \
+            git \
             build-essential \
+            ccache \
             ninja-build \
             python3 \
             python3-pip \
@@ -320,6 +322,7 @@ jobs:
             zip \
             unzip \
             tar \
+            ca-certificates \
             libffi-dev \
             libxml2-dev \
             zlib1g-dev \
@@ -327,13 +330,12 @@ jobs:
             libcurl4-openssl-dev \
             libunwind-dev \
             libfmt-dev \
-            libtinfo5 \
             clang-${{ matrix.clang_version }} \
             clang-tools-${{ matrix.clang_version }} \
             libclang-${{ matrix.clang_version }}-dev \
             libclang-cpp${{ matrix.clang_version }}-dev \
             llvm-${{ matrix.clang_version }}-dev
-          python3 -m pip install --break-system-packages --upgrade pip cmake
+          python3 -m pip install --break-system-packages --upgrade cmake
           echo "/usr/lib/llvm-${{ matrix.clang_version }}/bin" >> "$GITHUB_PATH"
       - name: Update and install dependencies (dnf)
         if: ${{ matrix.pkg_manager == 'dnf' }}
@@ -345,6 +347,7 @@ jobs:
             which \
             tar \
             xz \
+            ccache \
             ninja-build \
             python3 \
             python3-pip \
