Try to fix missing tests macos

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -149,6 +149,7 @@ jobs:
         env:
           LC_ALL: en_US.UTF-8
           LANG: en_US.UTF-8
+          GENTEST_TRACE_DISCOVERY: 1
         run: |
           set -euxo pipefail
           PRESET="${{ matrix.build_type == 'debug' && 'debug-system' || 'release-system' }}"
