Fix include path detection: use CMake infrastructure instead of runtime detection
The previous implementation used runtime platform detection to find system
include directories at tool startup, then injected those paths into ALL files
being parsed. This had several critical flaws:

1. **Cross-compilation broken**: Detected include paths from the host platform
   (e.g., macOS Homebrew LLVM) but applied them to code targeting different
   platforms (e.g., ARM Linux with arm-linux-gnueabihf-g++).

2. **Multiple toolchains broken**: A single project using different compilers
   for different files would get the same (wrong) include paths for all files.

3. **Platform-specific maintenance burden**: Required ~200 lines of platform-
   specific code to detect SDK paths on macOS, GCC paths on Linux, etc.

The root cause: CMake's compile_commands.json intentionally omits implicit
compiler include directories to avoid side effects. But ClangTool parses
commands directly without running the compiler driver, so it needs these
paths explicitly.

Export implicit include directories directly into compile_commands.json by
setting CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES from CMake's detected
CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES.

This makes CMake query each compiler during configuration and export the
correct implicit paths for that specific compiler into the compilation
database. Now each file uses its own compiler's include paths automatically.

CMakeLists.txt:
- Added: set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})

tools/src/main.cpp:
- Removed: detect_platform_include_dirs() call and include path injection logic
- Simplified: ArgumentsAdjuster now just passes through compilation database entries

tools/src/tooling_support.{hpp,cpp}:
- Removed: detect_platform_include_dirs() function (~200 lines of platform code)
- Removed: contains_isystem_entry() helper function

✅ Cross-compilation works: Each file uses its own compiler's include paths


--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+# Export implicit compiler include directories to compile_commands.json
+# This makes system headers visible to tools like clangd and our gentest_codegen
+# without requiring runtime compiler queries
+set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
+
 # Keep compile_commands.json free of experimental C++ modules flags so that
 # external tools (clangd, static analyzers) don't choke on unknown options.
 set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
