Fix LLVM 21 compatibility: Handle changed location APIs for member functions
    LLVM 21 introduced a behavior change in how source locations are reported
    for inline CXX member functions. Previously, FunctionDecl::getBeginLoc()
    would point to the start of the function declaration. In LLVM 21, it
    incorrectly points to the enclosing class declaration instead.

    This caused gentest_codegen to fail parsing C++ attributes on member
    functions, as it would scan backward from the wrong location and miss
    the [[using gentest: ...]] attributes that precede the function.

    Root cause analysis:
    - For member function `void size_zero()` with attribute on previous line
    - LLVM 20: getBeginLoc() → points to "void" (correct, includes attributes when scanning backward)
    - LLVM 21: getBeginLoc() → points to "struct StackFixture {" (wrong, misses attributes)
    - LLVM 21: getLocation() → points to "size_zero" (function name, after attribute)

    Solution:
    For CXXMethodDecl (member functions), use getTypeSourceInfo()->getTypeLoc().getBeginLoc()
    to find the return type location, which is correctly placed after any attributes
    but before the function name. For free functions, continue using getBeginLoc() which
    works correctly in both LLVM versions.

    This fix allows gentest_codegen to work with both LLVM 20 and LLVM 21, properly
    discovering all test case functions regardless of whether they're free functions
    or class member functions.

    Also re-enables LLVM 21 (llvm) in the macOS CI matrix.

Fix include path detection: use CMake infrastructure instead of runtime detection

    The previous implementation used runtime platform detection to find system
    include directories at tool startup, then injected those paths into ALL files
    being parsed.

    The root cause: CMake's compile_commands.json intentionally omits implicit
    compiler include directories to avoid side effects. But ClangTool parses
    commands directly

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,33 +16,47 @@ env:
 
 jobs:
   macos:
-    if: false
-    name: macOS • ${matrix.compiler} • ${matrix.build-type}
-    runs-on: macos-14
+    name: macOS • ${{ matrix.compiler }} • ${{ matrix.build-type }}
+    runs-on: macos-15
     strategy:
         fail-fast: false
         matrix:
-            compiler: ["appleclang", "llvm"]
+            compiler: ["appleclang", "llvm@20", "llvm"]
             build-type: ["debug", "release"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Select bundled Xcode toolchain
+      - name: Select Xcode 16.2 toolchain
         if: matrix.compiler == 'appleclang'
-        run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
+        run: |
+          # Use Xcode 16.2 (has Apple Clang 16/AppleClang 26)
+          if [ -d "/Applications/Xcode_16.2.app" ]; then
+            sudo xcode-select --switch /Applications/Xcode_16.2.app/Contents/Developer
+          else
+            sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer
+          fi
+          xcodebuild -version
 
       - name: Install dependencies (Homebrew)
         run: |
           brew update
-          brew install llvm ninja ccache
+          if [ "${{ matrix.compiler }}" = "llvm@20" ]; then
+            brew install llvm@20 ninja ccache
+          else
+            brew install llvm ninja ccache
+          fi
 
       - name: Configure LLVM environment
         run: |
-          LLVM_PREFIX="$(brew --prefix llvm)"
+          if [ "${{ matrix.compiler }}" = "llvm@20" ]; then
+            LLVM_PREFIX="$(brew --prefix llvm@20)"
+          else
+            LLVM_PREFIX="$(brew --prefix llvm)"
+          fi
           echo "LLVM_DIR=${LLVM_PREFIX}/lib/cmake/llvm" >> $GITHUB_ENV
           echo "PATH=${LLVM_PREFIX}/bin:$PATH" >> $GITHUB_ENV
-          if [ "${{ matrix.compiler }}" = "llvm" ]; then
+          if [ "${{ matrix.compiler }}" = "llvm" ] || [ "${{ matrix.compiler }}" = "llvm@20" ]; then
             echo "LLVM_BIN=${LLVM_PREFIX}/bin" >> $GITHUB_ENV
           fi
 
@@ -76,6 +90,11 @@ jobs:
           )
           if [ -n "${LLVM_DIR:-}" ]; then
             CMAKE_ARGS+=("-DLLVM_DIR=${LLVM_DIR}")
+            # Also add Clang_DIR to find ClangConfig.cmake
+            CLANG_DIR="$(dirname ${LLVM_DIR})/clang"
+            if [ -f "${CLANG_DIR}/ClangConfig.cmake" ]; then
+              CMAKE_ARGS+=("-DClang_DIR=${CLANG_DIR}")
+            fi
           fi
           cmake "${CMAKE_ARGS[@]}"
 
